syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "DiscountAPI.ProtoService";

service GrpcDiscountProductProvider {
	rpc GrpcAddDiscountProduct(GrpcProductDiscount) returns (GrpcDiscountBool);
	rpc GrpcUpdateDiscountProduct(GrpcProductDiscount) returns (GrpcDiscountBool);
}

message GrpcDiscountBool {
	bool response = 1;
}

message GrpcProductDiscount {
	int64 productId = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.DoubleValue discountFlat = 3;
	google.protobuf.DoubleValue discountPercent = 4;
	bool isDiscountPercent = 5;
	google.protobuf.DoubleValue mrp = 6;
	google.protobuf.DoubleValue price = 7;
}
